[metadata]
url = https://github.com/datalad/datalad-deprecated
author = The DataLad Team and Contributors
author_email = team@datalad.org
description = DataLad extension package for deprecated functionality that was phased out in the core package
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.10
install_requires =
    datalad >= 0.18.0
    jsmin
    whoosh
    PyYAML
    mutagen >= 1.36
    exifread
    python-xmp-toolkit
    Pillow

test_requires =
    coverage
    pytest
    pytest-cov
packages = find_namespace:
include_package_data = True

[options.extras_require]
devel =
    pytest
    pytest-cov
    coverage

[options.packages.find]
include = datalad_deprecated*

[versioneer]
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
VCS = git
style = pep440
versionfile_source = datalad_deprecated/_version.py
versionfile_build = datalad_deprecated/_version.py
tag_prefix =
parentdir_prefix =

[coverage:report]
show_missing = True
omit =
    # versioneer code
    datalad_deprecated/_version.py
